--- a/style.css
+++ b/style.css
@@ -52,7 +52,6 @@ section {
   justify-content: space-between;
   align-items: center;
   z-index: 100;
-  margin-bottom: 0;
 }
 .header.sticky {
   border-bottom: 0.1rem solid rgb(252, 187, 223);
@@ -72,7 +71,7 @@ section {
 .navbar a {
   font-size: 1.5vmax;
  }
- /*section
+ section
  {
    min-height: 100vh;
    padding: 10rem 9% 2rem;
@@ -94,7 +93,7 @@ section {
 
  .header.sticky{
   border-bottom: .1rem solid rgb(252, 187, 223);
- }*/
+ }
 
  .carousel {
     margin: 0;
