--- a/style.css
+++ b/style.css
@@ -552,7 +552,7 @@ span {
   border-radius: 2%;
   border:2px solid white;
   background: transparent;
-  background-color: #a9f396;
+  /*background-color: #a9f396;*/
 }
 .contact form .input-box {
   display: flex;
@@ -600,21 +600,21 @@ input::placeholder{
   font-size: 1.6rem;
   border:2px solid white;
   color: rgb(249, 249, 253);
-  /*background: var(--second-color);*/
-  background: #468536;
+  background: var(--second-color);
+  background: #04240e;
 
   border-radius: .8rem;
   margin: .7rem 0;
   border-radius: 20px;
   /*background: #053314;*/
-  /*box-shadow: inset 23px 23px 21px #04240e,
-  inset -23px -23px 21px #07421a;
+  box-shadow: inset 23px 23px 21px #04240e,
+  inset -23px -23px 21px #04240e;
 box-shadow: inset 23px 23px 21px #04240e,
-            inset -23px -23px 21px #07421a;*/
-            box-shadow: inset 23px 23px 21px #468536,
+            inset -23px -23px 21px #04240e;
+            /*box-shadow: inset 23px 23px 21px #468536,
             inset -23px -23px 21px #468536;
           box-shadow: inset 23px 23px 21px #468536,
-                      inset -23px -23px 21px #468536;
+                      inset -23px -23px 21px #468536;*/
   
 }
 .contact form .input-box input::placeholder,
@@ -627,8 +627,8 @@ box-shadow: inset 23px 23px 21px #04240e,
   border-radius: 0.8rem;
   margin: 0.7rem 0;
   border-radius: 20px;
-  background: #053314;
-  box-shadow: inset 23px 23px 21px #04240e, inset -23px -23px 21px #07421a;
+  background: #04240e;
+  box-shadow: inset 23px 23px 21px #04240e, inset -23px -23px 21px #04240e;
 }
 .contact form .input-box input::placeholder,
 .contact form textarea::placeholder {
