Carousel Component is added instead of a slideshow

--- a/style.css
+++ b/style.css
@@ -65,6 +65,12 @@ section {
   margin-right: 0;
   cursor: default;
 }
+h2{
+  font-weight: bold;
+}
+h3{
+  font-weight: bold;
+}
 .navbar a {
   font-size: 1.5vmax;
 
@@ -92,13 +98,19 @@ section {
  {
   border-bottom: .1rem solid rgb(252, 187, 223);
  }
-
+ .header a{
+  text-decoration: none;
+}
  .logo
  {
     font-size: 2.5rem;
     color: var(--txt-color);
     font-weight: 600;
     cursor: default;
+ }
+ .header .logo h3{
+  font-size: 2.75rem;
+  font-weight: bold;
  }
  .navbar a {
   position: relative;
@@ -180,7 +192,7 @@ section {
   min-height: 100vh;  
 }
 
-.slide_viewer {
+/* .slide_viewer {
   height: 100vh;
   overflow: hidden;
   position: relative;
@@ -188,17 +200,21 @@ section {
 
 .slide_group { 
   height: 100%;
-  position: relative;
-  width: 500%; /* Updated width to accommodate all slides */
-  transition: left 0.5s ease; /* Transition effect for smooth slide changes */
-}
+  position: relative; */
+  /* width: 500%;  */
+  /* Updated width to accommodate all slides */
+  /* transition: left 0.5s ease;  */
+  /* Transition effect for smooth slide changes */
+/* }
 
 .slide {
-  display: inline-block; /* Display slides in a row */
-  height: 100%;
-  width: 20%; /* Each slide occupies 20% width */
-  background-size: cover;
-}
+  display: inline-block; */
+   /* Display slides in a row */
+  /* height: 100%;
+  width: 20%; */
+   /* Each slide occupies 20% width */
+  /* background-size: cover;
+} */
 
 .home-content{
   z-index: 1;
@@ -213,6 +229,7 @@ section {
   height: 25vmax;
   font-size: 4vmax;
 }
+
 
 
 
